--- a/styles/text-style-02.css
+++ b/styles/text-style-02.css
@@ -10,6 +10,16 @@ hr {
     opacity: 0.375;
 }
 
+footer {
+    opacity: 0.5;
+    transition: all 400ms;
+}
+
+footer:hover {
+    opacity: 0.75;
+}
+
+
 #text-body {
     width: 50%;
     margin: 0 auto;
@@ -17,48 +27,53 @@ hr {
 
 @media (max-width: 1000px) {
     #text-body {
-    width: 75%;
+        width: 75%;
     }
 }
 
 @media (max-width: 750px) {
     #text-body {
-    width: 100%;
+        width: 100%;
     }
 }
 
 .shadow-effect {
-    box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.125);
+    box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.175);
     transition: all 200ms;
 }
 
 .shadow-effect:hover {
-    box-shadow: 1px 8px 10px rgba(0, 0, 0, 0.175);
+    box-shadow: 1px 8px 10px rgba(0, 0, 0, 0.3);
+}
+
+.footer-text {
+    text-align: center;
+    padding: 40px;
 }
 
 .p-text-body {
     opacity: 0.8;
     padding: 20px;
-    background-color: rgba(0, 0, 0, 0.06);
+    background-color: rgba(0, 0, 0, 0.04);
     border-radius: 25px;
     transition: all 200ms;
 }
 
 .p-text-body:hover {
     opacity: 1.0;
-    background-color: rgba(0, 0, 0, 0.02);
+    background-color: rgba(0, 0, 0, 0.015);
     border-radius: 10px;
 }
 
 .skills-to-learn {
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.08);
+    background-color: rgba(0, 0, 0, 0.06);
     border-radius: 25px;
     transition: all 200ms;
 }
 
 .skills-to-learn:hover {
-    background-color: rgba(0, 0, 0, 0.02);
+    background-color: rgba(0, 0, 0, 0.01);
     border-radius: 10px;
 }
 
@@ -66,7 +81,6 @@ hr {
     display: inline;
     vertical-align: middle;
     margin-left: 20px;
-    opacity: 0.75;
     opacity: 0.5;
     padding: 0px;
     background-color: rgba(0, 0, 0, 0);
